example to query using convenience method

--- a/examples/execute-query-manually/package.json
+++ b/examples/execute-query-manually/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "execute-query",
+  "name": "execute-query-manually",
   "version": "0.0.0",
-  "description": "executes a query, via a prepared template, using pg-dot-template & convenience methods",
+  "description": "executes a query, via a prepared template, using pg-dot-template",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
