--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "pg": ">= 7.0.0"
   },
   "devDependencies": {
-    "@conjurelabs/dot-template": ">=2.1.0"
+    "@conjurelabs/dot-template": "2.2.0"
   },
   "dependencies": {}
 }
